# actix-petclinic

./: .env  Cargo.toml  NOTICE  README.md
locales/: de.json  en.json  es.json  fa.json  ko.json  pt.json  ru.json  tr.json
migrations/: schema.sql
src/: main.rs
src/config/: db.rs  env.rs  i18n.rs  mod.rs  server.rs  tera.rs
src/domain/: mod.rs
src/domain/owner/: mod.rs  owner.rs  owners.rs  pet.rs  types.rs  visit.rs
src/domain/veterinarian/: specialty.rs  vet.rs  vet_specialty.rs
src/model/: app_error.rs  error_response.rs  mod.rs  page.rs
src/service/: mod.rs  owner_service.rs  pet_service.rs  vet_service.rs  visit_service.rs
src/web/: error_handler.rs  mod.rs  owner_handler.rs  pet_handler.rs  vet_handler.rs  visit_handler.rs  welcome_handler.rs
src/web/validator/: mod.rs
static/css/: font-awesome.min.css  petclinic.css
templates/: error.html  welcome.html
templates/fragments/: input-field.html  layout.html  nav-item.html  pagination.html  select-field.html
templates/owner/: create-or-update-owner-form.html  find-owners.html  owner-details.html  owners-list.html
templates/pet/: create-or-update-pet-form.html  create-or-update-visit-form.html
templates/vet/: vet-list.html
