[package]
name = "actix-petclinic"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "0.15"
chrono = "0.4"
quick-xml = { version = "0.37", features = ["serialize"] }
tera = "1.20"
